# Wishlist

./: .gitignore  docker-compose.yml  env_dev  pyproject.toml
auth_service/src/: main.py
auth_service/src/api/v1/: router.py
auth_service/src/api/v1/auth/: router.py  schemas.py
auth_service/src/api/v1/users/: router.py
auth_service/src/core/: config.py  logger.py  security.py
auth_service/src/db/postgres/: session.py
auth_service/src/db/redis/: redis.py
auth_service/src/models/: base.py
envs/: django  postgres  redis
nginx/conf.d/: site.conf
src/: alembic.ini  main.py
src/alembic/: env.py
src/alembic/versions/: 0fb62c9bad0b_initial_migration.py
src/api/v1/: router.py
src/api/v1/users/: router.py  shcemas.py
src/core/: config.py
src/db/postgres/: session.py
src/db/postgres/models/: association.py  gift.py  user.py  wishlist.py
src/models/: association.py  common.py
wishlist_srvice/src/: main.py
wishlist_srvice/src/alembic/: env.py
wishlist_srvice/src/api/v1/: router.py
wishlist_srvice/src/core/: config.py
wishlist_srvice/src/db/: postgres.py
wishlist_srvice/src/db/postgres/: session.py
wishlist_srvice/src/models/: gift.py  user.py  wishlist.py
